Refactor MovieServiceTest assertions and fix method name typo